--- a/views/country.ejs
+++ b/views/country.ejs
@@ -62,6 +62,16 @@
 
     </div>
 
+    <div class="card-actions justify-end">
+        <a href="/editCountry/<%= country.id %>" class="btn btn-success">Edit</a>
+        <a href="/countries/<%= country.id %>" class="btn btn-primary">View</a>
+    </div>
+
+    <div class="mt-2">
+        <span class="font-bold">Is Landlocked:</span> 
+        <%= country.landlocked ? "Yes" : "No" %>
+    </div>
+
   </div>
 </body>
 
